# nixpkgs-graph

./: .flake8  .gitignore  .test  NodeFormatTrans.py  README.md  Tocsv.py  build.sh  default.nix  graph.py  nodes.nix  pyproject.toml  requirements.txt  shell.nix  tocsv.py
.github/workflows/: lint.yml
src/graph_eloi_wang/: graph.py  nixpkgs_graph.py
src/nixpkgs_graph/: __main__.py  nixpkgs_analysis.py  nixpkgs_graph.nix  nixpkgs_graph.py
src/nixpkgs_graph.egg-info/: PKG-INFO  SOURCES.txt
src/nixpksg_graph.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
