[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nixpksg-graph"
version = "0.1.0"
authors = [
  { name="Eloi WANG", email="eloi.wang@tweag.io" },
]
maintainers = [
   { name="Guillaume DESFORGES", email="guillaume.desforges@tweag.io" },
]
description = "A nixpkgs content database with graph building"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tweag/nixpkgs-graph"
"Bug Tracker" = "https://github.com/tweag/nixpkgs-graph/issues"